syntax = "proto3";

option java_package = "com.example.fit4j.grpc";

package com.example;

service FooService {
  rpc getFooNameById(GetFooNameByIdRequest) returns (GetFooNameByIdResponse);
  rpc getFooById(GetFooByIdRequest) returns (GetFooByIdResponse);
}

message GetFooNameByIdRequest {
  int64 id = 1;
}

message GetFooNameByIdResponse {
  string name = 1;
}

message Foo {
  int64 id = 1;
  string name = 2;
}

message GetFooByIdRequest {
  int64 id = 1;
}

message GetFooByIdResponse {
  Foo foo = 1;
}